Getting list dynamically from server at load, building form currently

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -85,6 +85,12 @@ server {
 		}
 		location /archive/ { deny all; }
 		location /conf/ { deny all; }
+		location = /list {
+			# internal;
+			proxy_pass https://api.ponison.us/list.php;
+			proxy_set_header Accept-Encoding ""; 
+		}
+		location /pony/ { autoindex on; }
 		location /ssi/ { internal; }
 	}
 }
