Modularization of JS code is mostly complete because why not

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -71,6 +71,7 @@ server {
 	pagespeed LoadFromFile https://$host $ponisonus_document_root;
 	pagespeed EnableFilters $ponisonus_enable_filters;
 	pagespeed DisableFilters $ponisonus_disable_filters;
+	pagespeed DisableFilters hint_preload_subresources;
 	root $ponisonus_document_root;
 	ssi on;
 	ssi_last_modified on;
@@ -87,7 +88,7 @@ server {
 		location /archive/ { deny all; }
 		location /conf/ { deny all; }
 		location = /list {
-			# internal;
+			internal;
 			proxy_pass https://api.ponison.us/list.php;
 			proxy_set_header Accept-Encoding ""; 
 		}
