Removed nonce generation from nginx conf

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -50,12 +50,12 @@ server {
 	include server.conf.d/*.conf;
 
 	# set up content security policy
-	set_secure_random_alphanum $nonce 32;
+	# set_secure_random_alphanum $nonce 32;
 	set $csp_default "'self'";
 	set $csp_connect "connect-src $csp_default api.ponison.us";
 	set $csp_media "media-src $csp_default blob:";
-	set $csp_script "script-src $csp_default 'nonce-$nonce'";
-	set $csp_style "style-src $csp_default 'nonce-$nonce'";
+	set $csp_script "script-src $csp_default"; # 'nonce-$nonce'";
+	set $csp_style "style-src $csp_default"; # 'nonce-$nonce'";
 	more_set_headers "Content-Security-Policy: default-src $csp_default; $csp_connect; $csp_media; $csp_script; $csp_style; upgrade-insecure-requests";
 	etag on;
 	if_modified_since before;
