Miscellaneous small changes, including... * Added Equestria and Futura PT fonts to the web page * Added JSON-LD schema.org objects * Added a couple images for an icon * Adding colors to make the page a bit less boring

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -75,7 +75,7 @@ server {
 	root $ponisonus_document_root;
 	ssi on;
 	ssi_last_modified on;
-	# ssi_types "application/json" "application/ld+json" "application/manifest+json" "application/xml" "application/rss+xml" "application/vnd.api+json" "text/css";
+	ssi_types "application/ld+json"; #"application/json"  "application/manifest+json" "application/xml" "application/rss+xml" "application/vnd.api+json" "text/css";
 	ssl_certificate /etc/letsencrypt/live/ponison.us/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/ponison.us/privkey.pem;
 	ssl_trusted_certificate /etc/letsencrypt/live/ponison.us/chain.pem;
@@ -87,6 +87,9 @@ server {
 		}
 		location /archive/ { deny all; }
 		location /conf/ { deny all; }
+		location /font/ {
+			more_set_headers "Cache-Control: max-age=31536000";
+		}
 		location = /list {
 			internal;
 			proxy_pass https://api.ponison.us/list.php;
