Playing with bg image and metadata * Added a bg image to the site that sits in the bottom right unobtrusively * Completing metadata, including the addition of a manifest and sitemap * JS change to load bg image only after stylesheets have finished loading

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -11,6 +11,11 @@ map $http2 $ponisonus_enable_filters {
 }
 
 map $host $ponisonus_document_root { default "/var/www/html/ponison.us"; }
+map $host $ponisonus_description { default "A tool that can be used to generate sound files of your favorite pony for whatever degenerate reasons you may have, you disgusting pervert."; }
+map $host $ponisonus_keywords { default "pony,clop,sounds,erotic,horse,my little pony,friendship is magic,twilight sparkle"; }
+map $host $ponisonus_thumbnail { default "/img/twiggle_face_square.png"; }
+map $host $ponisonus_title { default "PoniSonus - Pony Sound Generator"; }
+map $host $ponisonus_url { default "https://ponison.us/"; }
 
 server {
 	server_name api.ponison.us api.ponisonus.com;
@@ -71,11 +76,11 @@ server {
 	pagespeed LoadFromFile https://$host $ponisonus_document_root;
 	pagespeed EnableFilters $ponisonus_enable_filters;
 	pagespeed DisableFilters $ponisonus_disable_filters;
-	pagespeed DisableFilters hint_preload_subresources;
+	pagespeed DisableFilters hint_preload_subresources,lazyload_images;
 	root $ponisonus_document_root;
 	ssi on;
 	ssi_last_modified on;
-	ssi_types "application/ld+json"; #"application/json"  "application/manifest+json" "application/xml" "application/rss+xml" "application/vnd.api+json" "text/css";
+	ssi_types "application/json" "application/ld+json" "application/manifest+json" "application/xml"; #  "application/rss+xml" "application/vnd.api+json" "text/css";
 	ssl_certificate /etc/letsencrypt/live/ponison.us/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/ponison.us/privkey.pem;
 	ssl_trusted_certificate /etc/letsencrypt/live/ponison.us/chain.pem;
